<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TableLayout
                android:layout_centerInParent="true"
                android:layout_width="300dp"
                android:layout_height="wrap_content">

            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"
                        android:gravity="right"
                        android:paddingRight="20dp"/>

                <EditText
                        style="@style/myEditTextStyle"
                        android:id="@+id/firstName_editText"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name"
                        android:gravity="right"
                        android:paddingRight="20dp"/>

                <EditText
                        android:id="@+id/lastName_editText"
                        style="@style/myEditTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/past_port"
                        android:gravity="right"
                        android:paddingRight="20dp"/>

                <EditText
                        android:id="@+id/passport_editText"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        style="@style/myEditTextStyle"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:gravity="right"
                        android:paddingRight="20dp"/>

                <EditText
                        android:id="@+id/email_editText"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        style="@style/myEditTextStyle"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:gravity="right"
                        android:paddingRight="20dp"/>

                <EditText
                        android:id="@+id/quantity_editText"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        style="@style/myEditTextStyle"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
            </TableRow>


            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/option"
                        android:gravity="right"
                        android:paddingRight="20dp"/>

                <Spinner
                        android:id="@+id/option_spinner"
                        android:spinnerMode="dropdown"
                        android:popupBackground="@color/bg_transparent_80"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:paddingLeft="10dp"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                    android:layout_marginTop="10dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/book_date"
                        android:gravity="right"
                        android:paddingRight="20dp"/>

                <Button
                        android:id="@+id/bookDate_btn"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                <Button
                        android:id="@+id/submitBtn"
                        android:text="Submit"
                        android:layout_marginLeft="120dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"/>
            </TableRow>

        </TableLayout>
    </RelativeLayout>
</ScrollView>